Created Home,Test-for & test pages and tested with some dummy data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">QuizMind</string>
+
+    <string-array name="quiz_levels">
+        <item>Select hardness level</item>
+        <item>Easy</item>
+        <item>Medium</item>
+        <item>Hard</item>
+        <item>Extra hard</item>
+    </string-array>
 </resources>
